issue css on IOS device

--- a/web/src/app/layout/menu/menu.component.scss
+++ b/web/src/app/layout/menu/menu.component.scss
@@ -339,7 +339,7 @@ button {
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
-  z-index: 1000;
+  z-index: 2000;
   padding-top: 10px;
   -webkit-box-shadow: 0px 1px 12px rgba(50, 50, 50, 0.15);
   -moz-box-shadow: 0px 1px 12px rgba(50, 50, 50, 0.15);
@@ -379,7 +379,7 @@ button {
 }
 
 .subcategory-section {
-  z-index: 1000;
+  z-index: 2000;
   position: absolute;
   width: 100%;
   overflow: scroll;
